--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon ./src/index.ts",
-    "prisma": "npx prisma migrate dev"
+    "dev": "nodemon ./src/server.ts",
+    "prisma": "npx prisma migrate dev",
+    "test": "jest --no-cache"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/cryptr": "^4.0.1",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.2",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/supertest": "^2.0.12",
+    "axios": "^0.27.2",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.3.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
