--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon ./src/server.ts",
     "prisma": "npx prisma migrate dev",
-    "test": "jest --no-cache"
+    "test": "dotenv -e .env.test prisma migrate dev && jest"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/supertest": "^2.0.12",
     "axios": "^0.27.2",
+    "faker": "^6.6.6",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.3.1",
@@ -36,6 +37,7 @@
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
     "dotenv": "^16.0.2",
+    "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
