--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "node dist/index.js",
     "dev": "nodemon ./src/server.ts",
     "prisma": "npx prisma migrate dev",
-    "test": "dotenv -e .env.test prisma migrate dev && jest"
+    "test": "dotenv -e .env.test jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/cors": "^2.8.12",
     "@types/cryptr": "^4.0.1",
     "@types/express": "^4.17.13",
