--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/index.js",
     "dev": "nodemon ./src/server.ts",
     "prisma": "npx prisma migrate dev",
-    "test": "dotenv -e .env.test jest"
+    "test": "dotenv -e .env.test prisma migrate dev && jest"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
