--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/src/server.js",
     "dev": "nodemon ./src/server.ts",
     "prisma": "npx prisma migrate dev",
-    "test": "dotenv -e .env.test jest"
+    "test": "npx dotenv -e .env.test prisma migrate dev && dotenv -e .env.test jest"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
